--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello cousera</title>
 </head>
 <body>
-<h1>Hello coursera 2</h1>
+<h1>Hello coursera its a great day</h1>
 </body>
 </html>
